# hackeroni

./: .env  README.md  compose.yaml  presentazione.odp  presentazione_final.odp  presentazione_split1_temp.odp
_frontend/: settings.gradle.kts
_frontend/composeApp/: build.gradle.kts
_frontend/gradle/: libs.versions.toml
_frontend/iosApp/iosApp.xcodeproj/: project.pbxproj
ai/: .env  Cargo.toml  test.sh
ai/src/: lib.rs  main.rs
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker_build_and_run.sh  launch_db.sh
backend/migrations/2024-07-30-153229_create_users/: up.sql
backend/migrations/2024-08-02-222058_create_station_info/: down.sql  up.sql
backend/migrations/2024-08-02-235606_create_plugs_info/: down.sql  up.sql
backend/src/: auth.rs  config.rs  log.rs  main.rs  odh.rs  stable_diffusion.rs  tests.rs
backend/src/db/: mod.rs  schema.rs  stations.rs  user.rs
backend/src/osrm/: hardcoded.rs  mod.rs  request.rs
backend/src/osrm/routes/: mod.rs  osmr_route.rs
backend/test-request/: ciao.json
frontend/: settings.gradle.kts
frontend/composeApp/: build.gradle.kts
frontend/gradle/: libs.versions.toml
frontend/iosApp/Configuration/: Config.xcconfig
frontend2/: README.md  pubspec.yaml
frontend2/android/app/: build.gradle
frontend2/ios/Runner/: Info.plist
frontend2/ios/Runner.xcodeproj/: project.pbxproj
frontend2/lib/: app.dart  main.dart
frontend2/lib/di/: setup.config.dart  setup.dart
frontend2/lib/l10n/: app_en.arb  app_it.arb
frontend2/lib/networking/: authentication.dart  backend.dart  parsers.dart  server_host_handler.dart
frontend2/lib/networking/data/: charging_station.dart  evplanner_route_query.dart  image_verification.dart  marker.dart  marker_image.dart  marker_type.dart  osm_nominatim_entry.dart  outlet_type.dart  route.dart
frontend2/lib/page/: introduction_page.dart
frontend2/lib/page/complete_task/: complete_task_page.dart
frontend2/lib/page/map/: additional_points_widget.dart  bottom_chip.dart  fast_markers_layer.dart  map_controls_widget.dart  map_page.dart  marker_filters_dialog.dart  route_bottom_sheet.dart  route_parameters_sheet.dart  search_bar.dart  settings_controls_widget.dart  target.dart  verify_message_box.dart
frontend2/lib/page/marker/: add_images_widget.dart  report_page.dart  resolve_page.dart
frontend2/lib/page/route_parameters/: route_parameters_page.dart
frontend2/lib/page/settings/: server_host_widget.dart  settings_page.dart
frontend2/lib/page/util/: marker_type_app_bar_title.dart
frontend2/lib/page/verification/: image_verification_page.dart
frontend2/lib/pref/: preferences_keys.dart
frontend2/lib/provider/: auth_user_provider.dart  location_info.dart  location_provider.dart  map_marker_provider.dart  verify_time_provider.dart
frontend2/lib/util/: error_messages.dart  image.dart  position.dart  preferences.dart  time.dart
frontend2/linux/: CMakeLists.txt  my_application.cc
frontend2/meta/: README.md
frontend2/test/: pill_page_test.dart
frontend2/web/: index.html  manifest.json
frontend2/windows/: CMakeLists.txt
frontend2/windows/runner/: Runner.rc  main.cpp
osrm/: .gitignore  Dockerfile  generate.sh
(+37 files in other folders)
