[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
#AI SHIT
candle-core={version="0.6"}
#candle-nn="0.6"
candle-transformers="0.6"
#bindgen_cuda={version = "0.1", optional = true}

anyhow="1.0"
clap={version="4.4", features = ["derive"]}
hf-hub = { version="0.3", features = ["tokio"] }
tokenizers="0.19"
image="0.25"
#tracing-subscriber = "0.3"
#tracing = "0.1"
#tracing-chrome="0.7"

[features]
default =["cuda"]
cuda = ["candle-core/cuda", "candle-transformers/cuda"]#"candle-nn/cuda", , "dep:bindgen_cuda"

[dev-dependencies]
